--- a/src/app/modules/clinician-manager/cards/patient-diseases.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-diseases.component.html
@@ -8,11 +8,55 @@
     <div class="card-block" style="overflow-x: auto">
 
 
-        <table class="table table-striped table-bordered table-sm">
+        <div class="row">
+
+            <div class="col-xs-4">
+                <label class="label-control">Rows on page</label>
+                <select class="form-control input-sm" [(ngModel)]="rowsOnPage">
+                    <option [ngValue]="5">5</option>
+                    <option [ngValue]="10">10</option>
+                    <option [ngValue]="15">15</option>
+                </select>
+            </div>
+            <div class="col-xs-8">
+                <div class="row">
+                    <label class="col-xs-12 label-control">Sort by</label>
+                </div>
+                <div class="col-xs-6">
+                    <div class="row">
+                        <select class="form-control input-sm" [(ngModel)]="sortBy">
+                            <option ngValue="name">Name</option>
+                            <option ngValue="onset">Date of Onset</option>
+
+                        </select>
+                    </div>
+                </div>
+                <div class="col-xs-6">
+                    <div class="row">
+                        <select class="form-control input-sm" [(ngModel)]="sortOrder">
+                            <option ngValue="asc">Ascending</option>
+                            <option ngValue="desc">Descending</option>
+                            <option ngValue="badValue">Bad value</option>
+                        </select>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <table class="table table-striped table-sm" [mfData]="diseases" #mf="mfDataTable"
+               [mfRowsOnPage]="rowsOnPage" [(mfSortBy)]="sortBy" [(mfSortOrder)]="sortOrder">
             <thead>
             <tr>
-                <th i18n="Name">Name</th>
-                <th i18n="Date of Onset">Date of Onset</th>
+                <th i18n="Name">
+                    <mfDefaultSorter by="name">
+                        Name
+                    </mfDefaultSorter>
+                </th>
+                <th i18n="Date of Onset">
+                    <mfDefaultSorter by="onset">
+                        Date of Onset
+                    </mfDefaultSorter>
+                </th>
                 <th i18n="Severity">Severity</th>
                 <th i18n="Side of Onset">Side of Onset</th>
                 <th i18n="Clinical Phenotype">Clinical Phenotype</th>
@@ -23,7 +67,7 @@
             <tbody>
 
 
-            <tr *ngFor="let disease of diseases">
+            <tr *ngFor="let disease of mf.data">
                 <td>{{disease.name}}</td>
                 <td>{{disease.dateOfOnset}}</td>
                 <td>{{disease.severity}}</td>
@@ -33,6 +77,14 @@
             </tr>
 
             </tbody>
+
+            <tfoot>
+            <tr>
+                <td colspan="5">
+                    <mfBootstrapPaginator></mfBootstrapPaginator>
+                </td>
+            </tr>
+            </tfoot>
         </table>
 
     </div>
