--- a/src/app/modules/clinician-manager/cards/patient-imaging.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-imaging.component.html
@@ -9,8 +9,8 @@
 
 
         <div class="row">
-            <h2 class="col-xs-6">Simple data table</h2>
-            <div class="col-xs-2">
+
+            <div class="col-xs-4">
                 <label class="label-control">Rows on page</label>
                 <select class="form-control input-sm" [(ngModel)]="rowsOnPage">
                     <option [ngValue]="5">5</option>
@@ -18,14 +18,14 @@
                     <option [ngValue]="15">15</option>
                 </select>
             </div>
-            <div class="col-xs-4">
+            <div class="col-xs-8">
                 <div class="row">
                     <label class="col-xs-12 label-control">Sort by</label>
                 </div>
                 <div class="col-xs-6">
                     <div class="row">
                         <select class="form-control input-sm" [(ngModel)]="sortBy">
-                            <option ngValue="type">type</option>
+                            <option ngValue="type">Type</option>
 
                         </select>
                     </div>
@@ -50,7 +50,7 @@
             <tr>
                 <th i18n="Type of Exam">
                     <mfDefaultSorter by="type">
-                        Name
+                        Type
                     </mfDefaultSorter>
                 </th>
                 <th i18n="exist">Exist</th>
