--- a/src/app/modules/clinician-manager/cards/patient-daily-average-observations.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-daily-average-observations.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-    <div class="card-header">
+    <div class="card-header w3-black">
 
         <div i18n="Average daily observations"><i class="fa fa-heartbeat"></i> Average daily observations</div>
         <div class="card-actions">
