--- a/src/app/modules/clinician-manager/clinician-manager.component.html
+++ b/src/app/modules/clinician-manager/clinician-manager.component.html
@@ -14,14 +14,6 @@
                     <div class="card-header w3-blue">
                         <h3 i18n="Patient Data Viewer"><i class="fa fa-calendar-check-o"></i> Patient Data Viewer</h3>
 
-                        Choose data range to be shown:
-
-                        <div class="w3-right">
-                            <my-date-range-picker [options]="myDateRangePickerOptions"
-                                                  (dateRangeChanged)="onDateRangeChanged($event)"
-                                                  [selDateRange]="model">
-                            </my-date-range-picker>
-                        </div>
 
                         <div class="card-actions">
                         </div>
@@ -39,19 +31,25 @@
 
                 </div>
             </div>
+        </div>
 
+        <div class="row">
 
-            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-6">
 
                 <patient-overview>
                 </patient-overview>
             </div>
 
-            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-6">
 
                 <patient-notifications>
                 </patient-notifications>
             </div>
+
+        </div>
+
+        <div class="row">
 
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-6">
 
@@ -68,6 +66,11 @@
                 </patient-imaging>
 
             </div>
+        </div>
+
+
+        <div class="row">
+
 
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
 
@@ -76,20 +79,64 @@
 
             </div>
 
-            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
 
-                <patient-checks>
-                </patient-checks>
+        </div>
 
-            </div>
 
+        <div class="row">
 
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                <div class="card">
+                    <div class="card-header w3-light-blue">
+                        <span i18n="Patient Data Viewer"><i class="fa fa-calendar-times-o"></i></span>
 
-                <medication-history>
-                </medication-history>
 
+                        <div class="w3-right">
+                            Choose data range to be shown in synchronisation for Visit and Medication history:
+                            <my-date-range-picker [options]="myDateRangePickerOptions"
+                                                  (dateRangeChanged)="onDateRangeChanged($event)"
+                                                  [selDateRange]="model">
+                            </my-date-range-picker>
+                        </div>
+
+                        <div class="card-actions">
+
+                        </div>
+                    </div>
+
+                    <div class="card-block">
+
+
+                        <div class="row">
+                            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+
+                                <patient-checks>
+                                </patient-checks>
+
+                            </div>
+
+                        </div>
+
+
+                        <div class="row">
+
+                            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+
+                                <medication-history>
+                                </medication-history>
+
+                            </div>
+                        </div>
+
+                    </div>
+
+
+                </div>
             </div>
+        </div>
+
+
+        <div class="row">
 
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
 
